5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1635_2446.log
== TEST (2019-04-15 13:34:30) 
-- CODE:
senha = int(input("a senha e: "))
if (senha == 234)
   print("acesso liberado")
else:
	print("senha invalida")
-- ERROR:
File "XXXX", line 2
    if (senha == 234)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:34:35) 
-- CODE:
senha = int(input("a senha e: "))
if (senha == 234):
   print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:34:43) 
-- CODE:
senha = int(input("a senha e: "))
if (senha == 234):
   print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.150942
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:36:53) 
-- CODE:
senha = int(input("a senha e: "))
calculo = 4 + 6 + 8
if (senha == multiplo de 1 + 3 + 5):
   print("acesso liberado")
else:
	print("senha invalida")
-- ERROR:
File "XXXX", line 3
    if (senha == multiplo de 1 + 3 + 5):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:42:44) 
-- CODE:
s = int(input("a senha e: "))
w = (s//100000)%10
a = (s//10000)%10
b = (s//1000)%10
c = (s//100)%10
d = (s//10)%10
e = (s%10)

f = (w + b + d) % (a + c + e)
if (s == 0):
   print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:43:13) 
-- CODE:
s = int(input("a senha e: "))
w = (s//100000)%10
a = (s//10000)%10
b = (s//1000)%10
c = (s//100)%10
d = (s//10)%10
e = (s%10)

f = (w + b + d) % (a + c + e)
if (s == 0):
   print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.124996
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:43:39) 
-- CODE:
s = int(input("a senha e: "))
w = (s//100000)%10
a = (s//10000)%10
b = (s//1000)%10
c = (s//100)%10
d = (s//10)%10
e = (s%10)

f =  (a + c + e) % (w + b + d) 
if (s == 0):
   print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:44:03) 
-- CODE:
s = int(input("a senha e: "))
w = (s//100000)%10
a = (s//10000)%10
b = (s//1000)%10
c = (s//100)%10
d = (s//10)%10
e = (s%10)

f =  (a + c + e) % (w + b + d) 
if (f == 0):
   print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:44:11) 
-- CODE:
s = int(input("a senha e: "))
w = (s//100000)%10
a = (s//10000)%10
b = (s//1000)%10
c = (s//100)%10
d = (s//10)%10
e = (s%10)

f =  (a + c + e) % (w + b + d) 
if (f == 0):
   print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.210172
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
